--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,7 +43,7 @@ html
           i READ, UPDATE, or DELETE an Article : by clicking on the article in the table
       hr
       footer
-        p Copyright &copy; 2020
+        p Copyright &copy; 2020 Tarsha.Tech
     script(src='/bower_components/jquery/dist/jquery.js')
     script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
     script(src='/js/main.js')
